inaccurate key config output #34366

Closed
opened 2013-02-22 17:05:10 +01:00 by Kevin T · 3 comments

%%%--- Operating System, Graphics card ---
vista 32bit

- Blender version with error---

blender-2.66-windows32.zip

- Short description of error ---

i have a custom key config set with the following settings(see image for better explanation)

3D view>Mesh>new
mesh.select_mode

Extend:false
Expand:true
Type:faces
Action:toggle

but when calling it with the hotkey, this is what i get:

bpy.ops.mesh.select_mode(use_extend=True, use_expand=True, type='FACE', action='TOGGLE')

Extend gets the value "true", and not false as it should(?)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

1.open attached file
2.add a custom keymap in user pref >input>3d view> Mesh >add New
3.use same setting as attached file
4.Make sure you in vertex edit mode for the plane.And have atleast 1 vertex selected
5.press ctrl-shift+(+key)
6. Compare the output given in the "info" panel with settings set for the hotkey.

%%%

%%%--- Operating System, Graphics card --- vista 32bit - Blender version with error--- blender-2.66-windows32.zip - Short description of error --- i have a custom key config set with the following settings(see image for better explanation) 3D view>Mesh>new mesh.select_mode Extend:false Expand:true Type:faces Action:toggle but when calling it with the hotkey, this is what i get: bpy.ops.mesh.select_mode(use_extend=True, use_expand=True, type='FACE', action='TOGGLE') Extend gets the value "true", and not false as it should(?) - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1.open attached file 2.add a custom keymap in user pref >input>3d view> Mesh >add New 3.use same setting as attached file 4.Make sure you in vertex edit mode for the plane.And have atleast 1 vertex selected 5.press ctrl-shift+(+key) 6. Compare the output given in the "info" panel with settings set for the hotkey. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn now, still not ideal but it's a bit of a limitation of our event / UI system. They were hardcoded to use shift/ctrl modifiers to set these options, now you can override them from the key configuration, but note you need to click the use extend option once to make that register.%%%

%%%Fixed in svn now, still not ideal but it's a bit of a limitation of our event / UI system. They were hardcoded to use shift/ctrl modifiers to set these options, now you can override them from the key configuration, but note you need to click the use extend option once to make that register.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#34366
No description provided.