Fix #34366: mesh.select_mode operator could not be configure the use_extend and use_expand properly. These are hardcoded to shift and ctrl to make them work when clicking buttons or menus. Now it checks if the properties are set, which is still not ideal but makes it possible to override them from the key configuration.